# cobra-component-models

./: .gitattributes  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  SUPPORT.rst
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-question.md  03-feature-request.md
.github/workflows/: cron.yml  main.yml
docs/source/: conf.py  index.rst
docs/source/autogen/: cobra_component_models.data.rst  cobra_component_models.io.rst  cobra_component_models.io.type.rst  cobra_component_models.orm.mixin.rst  cobra_component_models.orm.rst  cobra_component_models.rst  cobra_component_models.serializer.rst  modules.rst
src/cobra_component_models/: __init__.py  _version.py  helpers.py
src/cobra_component_models/builder/: __init__.py  abstract_builder.py  compartment_builder.py  compound_builder.py  reaction_builder.py
src/cobra_component_models/data/: __init__.py  biology_qualifiers.txt
src/cobra_component_models/io/: __init__.py  abstract_base_model.py  annotation_model.py  compartment_model.py  components_model.py  compound_model.py  io_base.py  name_model.py  reaction_model.py  sbase_model.py
src/cobra_component_models/io/type/: __init__.py  annotation_type.py  notes_type.py
src/cobra_component_models/orm/: __init__.py  abstract_component.py  base.py  biology_qualifier.py  compartment.py  compartment_annotation.py  compartment_name.py  compound.py  compound_annotation.py  compound_name.py  namespace.py  participant.py  reaction.py  reaction_annotation.py  reaction_name.py  timestamp_mixin.py
src/cobra_component_models/orm/mixin/: __init__.py  annotation_mixin.py  name_mixin.py
src/cobra_component_models/serializer/: __init__.py  abstract_serializer.py  compartment_serializer.py  compound_serializer.py  reaction_serializer.py
tests/test_integration/: conftest.py  test_api.py
tests/test_integration/builder/: test_abstract_builder.py  test_compartment_builder.py  test_compound_builder.py  test_reaction_builder.py
tests/test_integration/data/: compartments.toml  compounds.toml  namespaces.toml  reactions.toml
tests/test_integration/orm/: test_biology_qualifier.py  test_compartment.py  test_compartment_annotation.py  test_compartment_name.py  test_compound.py  test_compound_annotation.py  test_compound_name.py  test_namespace.py  test_participant.py  test_reaction.py  test_reaction_annotation.py  test_reaction_name.py
tests/test_integration/serializer/: test_abstract_serializer.py  test_compartment_serializer.py  test_compound_serializer.py  test_reaction_serializer.py
tests/test_unit/: test_helpers.py
tests/test_unit/io/: test_abstract_base_model.py  test_annotation_model.py  test_compartment_model.py  test_components_model.py  test_compound_model.py  test_name_model.py  test_reaction_model.py  test_sbase_model.py
tests/test_unit/io/type/: test_annotation_type.py  test_notes_type.py
