[metadata]
name = cobra-component-models
url = https://github.com/opencobra/cobra-component-models
download_url = https://pypi.org/project/cobra-component-models/
project_urls =
    Source Code = https://github.com/opencobra/cobra-component-models
    Documentation = https://cobra-component-models.readthedocs.io
    Bug Tracker = https://github.com/opencobra/cobra-component-models/issues
author = Moritz E. Beber
author_email = midnighter@posteo.net
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
license = Apache-2.0
description = SQLAlchemy ORM and pydantic data models for SQL storage and JSON serialization of COBRA components such as reactions, compounds, and compartments.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    COBRA
    data models
    ORM models

[options]
zip_safe = True
install_requires =
    depinfo~=1.5
    pydantic~=1.4
    SQLAlchemy~=1.3
python_requires = >=3.7
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.packages.find]
where = src

[options.package_data]
cobra_component_models.data =
    biology_qualifiers.txt

[options.extras_require]
development =
    black
    isort
    pep517
    tox

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/cobra_component_models/_version.py
versionfile_build = cobra_component_models/_version.py
tag_prefix =

